# MonteCarloAnalysis

./: README.md
vizualizer/: pyproject.toml
vizualizer/assets/: data_all_circles_in_square.json  data_circle_win_min_radius.json  data_min_square.json
vizualizer/vizualizer/: deviations.py  measurements.py
