[tool.poetry]
name = "vizualizer"
version = "0.1.0"
description = ""
authors = ["Shamil <toshamilgis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.3"

[tool.poetry.scripts]
measurements = "vizualizer.measurements:main"
deviations = "vizualizer.deviations:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
